--- a/style.css
+++ b/style.css
@@ -34,6 +34,32 @@
     font-weight: 300;
 }
 
-@media  {
+.user--icon{
+    display : none;
+}
+
+@media only screen and (max-width : 600px) {
+    .navbar--menu-container .link{
+        display: none;
+    }
+    
+    .navbar{
+        padding : 16px;
+    }
+
+    .hero--section{
+        min-height: 80vh;
+    }
+
+    .user--icon{
+        height: 30px;
+        width: 30px;
+        border: 1px solid white;
+        border-radius: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     
 }
+
