we offer and collections section completed

--- a/style.css
+++ b/style.css
@@ -113,6 +113,128 @@
 
 }
 
+.container{
+    margin : 48px auto;
+    width : 80%;
+}
+ .we--offer{
+    display: flex;
+    flex-wrap: wrap;
+    gap : 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.we--offer .card{
+    border-radius: 10px;
+    overflow: hidden;
+    border : 1px solid #e0e0e0;
+    transition: all ease-in-out 300ms;
+}
+
+
+.we--offer .card img{
+    width : 100%;
+    height : 150px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.we--offer .card h3{
+    font-weight: 500;
+    padding : 10px 10px 0 10px;
+}
+
+.we--offer .card p{
+    padding : 0 10px 10px 10px;
+}
+
+.we--offer .card:hover{
+    transform: scale(1.05);
+    cursor : pointer;
+}
+
+.collections--container h1{
+    font-weight : 500;
+}
+
+.collections--container .sub-heading--container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap : 20px;
+    font-size : 18spx;
+}
+
+.collections--container .sub-heading--container span:nth-child(2){
+    color: #FF7E8B;
+}
+
+
+.collection-card-container{
+    display : flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap : 20px;
+    margin-top: 24px;
+}
+
+.collection-card-container .card{
+    height : 320px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position : relative;
+}
+
+.card1{
+    background-image: url(images/collection1.jpg);
+}
+
+.card2{
+    background-image: url(images/collection2.jpg);
+}
+
+.card3{
+    background-image: url(images/collection3.jpg);
+}
+
+.card4{
+    background-image: url(images/collection4.jpg);
+}
+
+.card .content{
+    color : white;  
+    padding : 10px;
+    bottom: 0;
+    position: absolute;
+    left: 0;
+
+}
+
+.card .content h4{
+    font-weight: 400;
+}
+
+.overlay{
+    background: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.9) 0%,
+        rgba(0,0,0,0.05) 50%,
+        rgba(0,0,0,0.05)85%
+    );
+    width : 100%;
+    height: 100%;
+    position : absolute;
+    left : 0;
+    top : 0;
+    border-radius: 10px;
+}
+
+
 @media only screen and (max-width : 600px) {
     .navbar--menu-container .link{
         display: none;
