--- a/style.css
+++ b/style.css
@@ -234,6 +234,58 @@
     border-radius: 10px;
 }
 
+.places--container{
+    display : flex;
+    flex-wrap: wrap;
+    margin : 24px 0 0 0;
+    gap : 16px;   
+    justify-content: space-evenly;
+}
+
+.places{
+    display: flex;
+    width : 330px;
+    min-width : 300px;
+    border : solid 1px #e0e0e0;
+    border-radius : 10px;
+    height : 80px;
+    align-items: center;
+    justify-content: space-between;
+    padding : 10px;
+}
+ 
+
+.see--more{
+    display: flex;
+    gap : 16px;
+    justify-content: center;
+    align-items: center;
+    width : 330px;
+    min-width : 300px;
+    border : solid 1px #e0e0e0;
+    border-radius: 10px;
+    height : 80px;
+}
+
+
+.localities--heading-container h2{
+    font-weight: 500;  
+}
+
+.localities--heading-container span{
+    font-weight: 600;  
+}
+
+.places .heading--places h4{
+    font-weight: 500;
+}
+
+.places:hover{
+    cursor: pointer;
+    box-shadow: 5px 5px 8px #e0e0e0;
+}
+
+
 
 @media only screen and (max-width : 600px) {
     .navbar--menu-container .link{
