--- a/style.css
+++ b/style.css
@@ -285,7 +285,89 @@
     box-shadow: 5px 5px 8px #e0e0e0;
 }
 
+.get--the-app{
+    background: rgb(255, 251, 247);
+    padding: 48px;
+    width : 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
 
+.semiContainer{
+    display : flex;
+    align-items: center;
+    justify-content: center;
+    gap : 34px;
+    flex-wrap: wrap;
+}
+
+.get--the-app .semiContainer .left{
+    display : flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.get--the-app .semiContainer .right h1{
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.get--the-app .semiContainer .left img{
+    height : auto;
+    width : 250px;
+}
+
+.app--container-heading{
+    display : flex;
+    flex-direction: column;
+    gap : 16px;
+}
+
+
+.right{
+    display:flex;
+    flex-direction: column;
+    gap : 16px;
+    
+}
+
+.radio--container{
+    display :flex;
+    gap : 32px;
+}
+
+.get--the-app .right .input--bar-container input{
+    height : 48px;
+    width : 320px;
+    padding: 8px 16px;
+    border-radius: 10px;
+    border : 1px solid #e0e0e0;
+}
+
+.get--the-app .right .input--bar-container button{
+    color : white;
+    height : 48px;
+    width : 120px;
+    background: rgb(239, 79, 95);
+    border : none;
+    border-radius: 10px;
+}
+
+.get--the-app .right .download--app-from{
+    display : flex;
+    flex-direction: column;
+    gap : 16px;
+}
+
+.get--the-app .right .download--app-from .images--container{
+    display: flex;
+    gap : 16px;
+}
+
+.get--the-app .right .download--app-from .images--container img{
+    height : 40px;
+}
 
 @media only screen and (max-width : 600px) {
     .navbar--menu-container .link{
