--- a/style.css
+++ b/style.css
@@ -369,6 +369,32 @@
     height : 40px;
 }
 
+.explore--near-me{
+    display : flex;
+    flex-direction: column;
+    gap : 24px;
+}
+
+.explore--near-me .explore-options{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height : 68px;
+    border : 1px solid #e0e0e0;
+    border-radius: 10px;
+    padding : 16px;
+}
+
+.explore--near-me h1{
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.explore--near-me .explore-options h4{
+    font-size: 20px;
+    font-weight: 400;
+}
+
 @media only screen and (max-width : 600px) {
     .navbar--menu-container .link{
         display: none;
