--- a/style.css
+++ b/style.css
@@ -395,6 +395,78 @@
     font-weight: 400;
 }
 
+.footer--navigation{
+    width: 100%;
+}
+
+.footer--navigation .footer--sec1{
+    display : flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap : 16px;
+    margin-top: 64px;
+}
+
+.footer--navigation .footer--sec1 .footer--logo img{
+    width : 130px;
+    height: auto;
+}
+
+.footer--navigation .footer--sec1 .button--container{
+    display: flex;
+    gap : 16px;
+}
+
+.footer--navigation .footer--sec1 .button--container button{
+    padding : 8px;
+    border-radius: 5px;
+    width : 130px;
+    font-size: 20px;
+    border:gray 1px solid;
+    background: transparent;
+}
+
+.footer--navigation .nav--links-container{
+    display : grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap : 16px;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links{
+    display: flex;
+    flex-direction: column;
+    gap : 8px;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links a{
+    text-decoration: none;
+    color : gray;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links h4{
+    font-weight: 500;
+    letter-spacing: 3px;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links .social--media-icons-container{
+    display: flex;
+    gap : 8px;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links .social--media-icons-container a{
+    border : 1px solid black;
+    border-radius:50% ;
+    color:white;
+    padding :5px;
+    background: black;
+}
+
+.footer--navigation .nav--links-container .nav-footer--links img{
+    width : 180px;
+    height: auto;
+}
+
 @media only screen and (max-width : 600px) {
     .navbar--menu-container .link{
         display: none;
@@ -451,5 +523,22 @@
         height: calc(80vh - 60px);
     }
 
+    .footer--navigation .nav--links-container{
+        grid-template-columns: 1fr ;
+        grid-template-rows: 1fr;
+    }
+
+
+   
+
 }
+
+@media only screen and (min-width : 900px){
+    .footer--navigation .nav--links-container{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+}
+
+
 
